# ai-hedge-fund

./: .gitignore  Morning_Mountain_Bike_Ride.gpx  ape-config.yaml  coins_with_liquidity.parquet  fix_unicode_in_notebook.py  pyproject.toml  route_info.json  slot0_timeseries.parquet
.build/: __local__.json
.cursor/rules/: langchain.mdc  python.mdc
app/backend/: main.py
app/backend/models/: events.py  schemas.py
app/backend/routes/: __init__.py  health.py  hedge_fund.py
app/backend/services/: graph.py  portfolio.py
slot0_chunks/: slot0_26828875_26928874.parquet  slot0_26928875_27028874.parquet  slot0_27028875_27128874.parquet  slot0_27128875_27228874.parquet  slot0_27228875_27328874.parquet  slot0_27328875_27428874.parquet  slot0_27428875_27528874.parquet  slot0_27528875_27628874.parquet  slot0_27628875_27728874.parquet  slot0_27728875_27828874.parquet  slot0_27828875_27928874.parquet  slot0_27928875_28028874.parquet  slot0_28028875_28128874.parquet  slot0_28128875_28228874.parquet  slot0_28228875_28328874.parquet  slot0_28328875_28428874.parquet  slot0_28428875_28528874.parquet  slot0_28528875_28628874.parquet  slot0_28628875_28728874.parquet
src/: backtester.py  main.py
src/agents/: aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/data/: btc.py
src/graph/: state.py
src/llm/: models.py
src/selv/: analysis.py  backtest.ipynb  indicators.py  live.py  monte_carlo.py  strategies.py  vis.py
src/selv/tests/: test_backtest.py  test_indicators.py  test_monte_carlo.py
src/tools/: api.py
src/utils/: analysts.py  display.py  docker.py  llm.py  ollama.py  progress.py  visualize.py
src/zora-coin/: __init__.py  decode_data.py  download_data.py  example.py  historical.py  plot_prices.py  run_analysis.py  swap_analyzer.py  swap_analyzer_tools.py  swap_data.py  swap_graph.py  test_swap_data.py  utils.py
src/zora-coin/sandbox/: exploration.py
